# cos-aa

./: .env.example  .gitignore  API_DOCUMENTATION.md  DEPLOYMENT_STATUS.md  FINAL_SUMMARY.md  LINKEDIN_PORTFOLIO_GUIDE.md  Makefile  OAUTH_FIX_GUIDE.md  OAUTH_TROUBLESHOOTING.md  PROJECT_COMPLETE.md  TEST_PLAN.md  VERIFICATION_REPORT.md  alembic.ini  demo.py  docker-compose.dev.yml  docker-compose.free-tier.yml  docker-compose.integration.yml  mock_server.py  pyproject.toml  requirements.txt  ruff.toml  tests_e2e_api.py  vercel.json
.github/workflows/: cd.yml  ci.yml
docs/dr-drills/: full-system-recovery.md  postgres-failover.md  redis-failover.md
docs/runbooks/: agent-heartbeat-failure.md  circuit-breaker-open.md  dlq-overflow.md  hub-leader-failover.md  ooda-cycle-stuck.md
frontend/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
infra/alerting/: pagerduty-config.yaml
infra/caddy/: Caddyfile
infra/docker/: Dockerfile.agent-base  Dockerfile.api  Dockerfile.frontend  Dockerfile.hub  Dockerfile.worker
infra/prometheus/: alerts.yaml  prometheus.yml
infra/security/: owasp-zap-config.yaml  trivy-config.yaml
infra/terraform/: main.tf  production.tfvars  staging.tfvars  variables.tf
protos/: agent_service.proto  memory_service.proto
scripts/: bootstrap-terraform.sh  create-k8s-secrets.sh  deploy.sh  setup-free-tier.sh
src/agents/: base_agent.py  heartbeat.py
src/api/: main.py
src/auth/: tenant.py  vault_client.py
src/core/: config.py  domain_objects.py  exceptions.py  message_schemas.py
src/db/: init_db.py  postgres.py  redis_client.py
src/hub/: act.py  agent_router.py  cot_reasoner.py  decide.py  hub_state.py  leader_election.py  observe.py  ooda_engine.py  orient.py  review.py
src/llm/: anthropic_client.py  embeddings.py  llm_client.py  openai_client.py
src/memory/: consolidation_job.py  episodic_memory.py  memory_service.py  procedural_memory.py  retrieval_ranker.py  semantic_memory.py  working_memory.py
src/messaging/: broker.py  dispatcher.py  dlq_consumer.py  grpc_client.py  idempotency.py  pubsub.py
src/observability/: logger.py  metrics.py  tracer.py
src/tools/: database_query.py  (+4 more)
tests/: conftest.py
(+125 files in other folders)
