[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cos-aa"
version = "2.0.0"
description = "Cognitive Operating System for AI Agents"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",

    # Task queue
    "celery[redis]>=5.4.0",
    "kombu>=5.3.0",

    # gRPC
    "grpcio>=1.63.0",
    "grpcio-tools>=1.63.0",
    "protobuf>=5.26.0",

    # LLM providers
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",

    # Vector databases
    "chromadb>=0.5.0",
    "pinecone-client>=4.1.0",

    # Relational database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.2.5",

    # Cache and broker
    "redis[hiredis]>=5.0.0",

    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "hvac>=2.1.0",

    # Observability
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "prometheus-client>=0.20.0",
    "structlog>=24.1.0",

    # Reliability
    "tenacity>=8.3.0",
    "pybreaker>=1.2.0",

    # Data validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",

    # Utilities
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "orjson>=3.10.0",
    "numpy>=1.26.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "testcontainers>=4.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = false
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
